unpackaged/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Utilisé pour les rapports</description>
    <label>Activity Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>