unpackaged/main/default/objects/Activity/fields/Assigned_to_Agency__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Agency__c</fullName>
    <formula>CASE( 
    TEXT(Owner:User.Agency__c),
'110', 'EX CPA NORD EST',
'217', 'RETAIL T2',
'220', 'EX CPA PARIS CENTRE',
'230', 'EX EX QUADRATUS',
'290', 'RETAIL T3',
'320', 'CPA CENTRE EST',
'360', 'EX ENTREPRISE OUEST',
'390', 'EX ENTREPRISE EST',
'391', 'EX XRP Flex',
'410', 'CPA SUD',
'470', 'CPA OUEST',
'530', 'EXCEPT COMMERCIAL AGENCY',
'549', 'Retail North Africa',
'550', 'Retail North Europe',
'552', 'Retail South Europe',
'556', 'Retail Middle East',
'557', 'Retail APAC',
'562', 'EX HCM US',
'563', 'HCM Canada - Talentsoft',
'584', 'Retail DOM TOM',
'585', 'HCM LATAM - Mixte',
'652', 'EXCEPT REVENUE',
'699', 'GROUP COMPANIES',
'714', 'HCM France - New Cli',
'715', 'HCM France - Installed Base',
'716', 'EX QUALIAC New Business',
'717', 'EX QUALIAC Installed base',
'720', 'EX CYLANDE GD',
'721', 'EX LOOP',
'800', 'Tax FR Base&amp;Optitaxe',
'801', 'EX TAX International',
'803', 'IS SB MIG',
'804', 'IS SB Partner',
'805', 'IS ERP &amp; HCM',
'806', 'EX IS PMI',
'808', 'IS ERP Mid Partner',
'809', 'RETAIL Customer Success',
'340', 'CPA GRANDS COMPTES OGA',
'555', 'Retail China',
'560', 'Retail USA',
'583', 'Retail France Indirect',
'810', 'Tax FR Conquête',
'812', 'HCM Iberia - Installed Base',
'813', 'HCM Iberia - New Cli',
'112', 'CPA CHASSE',
'411', 'CPA MODERNISATION SUD',
'412', 'CPA TRANSFORMATION SUD',
'113', 'CPA MODERNISATION NORD',
'114', 'CPA TRANSFORMATION NORD',
'115', 'CPA CSM',
'392', 'ERP-Entreprise Terrain direct',
'393', 'ERP-Entreprise CSM',
'394', 'ERP-Entreprise Terrain indirect',
'395', 'Finance Flex',
'396', 'ERP-GC Base',
'397', 'EX ERP-GC New Cli',
'811', 'Finance Spain',
'814', 'ACA Assurance BF',
'815', 'ACA Industries Services',
'816', 'Cedricom',
'818', 'CPA Paris NORD',
'819', 'Finance - Strategic Accounts',
'822', 'Finance - CSM',
'823', 'HCM LATAM - Talentsoft',
'824', 'HCM Iberia - Talentsoft',
'825', 'HCM Iberia - Partner',
'826', 'HCM France - CSM',
'829', 'CPA Specialist',
'830', 'CPA Installed Base Sedentary',
'831', 'IS Relation',
'832', 'Talentsoft Fr – MidMarket',
'834', 'Talentsoft Fr – Public &amp; LA',
'835', 'Talentsoft Int - DACH',
'836', 'Talentsoft Int - Nordics',
'837', 'Talentsoft Int - Benelux',
'838', 'Talentsoft Int - Partners',
'839', 'Talentsoft Int - ROW',
'841', 'Talentsoft - CSM',
'842', 'HCM - Wittyfit',
'840', 'HCM Payroll',
'843', 'Alliances',
'844', 'Retail Store Excellence UK',
'845','Finance Large 1',
'846','Finance Large 2',
'847','Finance Large 3',
'849','Finance Mid 1',
'850','Finance Mid 2',
'852','Finance Notilus InOne',
'853','Finance Notilus YourWay',
'854','Finance Notilus T&amp;E',
'855','IS HCM',
'856','IS SB NCA',
'857','Digital Recruiters',
'858','HCM Portugal',
        'Not Assigned'
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Agency</label>
    <type>Text</type>
</CustomField>