unpackaged/main/default/objects/Activity/fields/Assigned_to_BU__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_BU__c</fullName>
    <formula>Owner:User.BU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to BU</label>
    <type>Text</type>
</CustomField>