unpackaged/main/default/objects/Activity/fields/Estimated_time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_time__c</fullName>
    <label>Estimated time (in minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>