unpackaged/main/default/objects/Activity/fields/Generates_Order_Influence__c.field-meta.xml
<CustomField>
    <fullName>Generates_Order_Influence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generates Order Influence</label>
    <type>Checkbox</type>
</CustomField>