unpackaged/main/default/objects/Activity/fields/Has_Description__c.field-meta.xml
<CustomField>
    <fullName>Has_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Description</label>
    <type>Checkbox</type>
</CustomField>