unpackaged/main/default/objects/Activity/fields/Meeting_minutes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_minutes__c</fullName>
    <label>Meeting minutes</label>
    <type>TextArea</type>
</CustomField>