unpackaged/main/default/objects/Activity/fields/Passed_Time__c.field-meta.xml
<CustomField>
    <fullName>Passed_Time__c</fullName>
    <label>Passed Time (in minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>