unpackaged/main/default/objects/Activity/fields/Pre_Sales_Action__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Action__c</fullName>
    <label>Pre-Sales Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>RFI answer</fullName>
            </value>
            <value>
                <fullName>RFP / Cdc answer</fullName>
            </value>
            <value>
                <fullName>Demonstration / POC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>