unpackaged/main/default/objects/Activity/fields/Referral_Customer__c.field-meta.xml
<CustomField>
    <fullName>Referral_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Referral_Customer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>