unpackaged/main/default/objects/Activity/fields/Sales_Type_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type_User__c</fullName>
    <description>refers to the Sales Type of the user who is assigned to the event.</description>
    <formula>TEXT(Owner:User.Sale_Type__c)</formula>
    <label>Sales Type User</label>
    <type>Text</type>
</CustomField>