unpackaged/main/default/objects/Activity/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Business review</fullName>
            </value>
            <value>
                <fullName>Cegid</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Customer follow-up</fullName>
                <isActive>false</isActive>
                <label>Customer follow-up</label>
            </value>
            <value>
                <fullName>Customer Success Review</fullName>
            </value>
            <value>
                <fullName>Demonstration</fullName>
            </value>
            <value>
                <fullName>Déploiement - Formation</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Engagement et croissance</fullName>
            </value>
            <value>
                <fullName>Executive Meeting</fullName>
            </value>
            <value>
                <fullName>Executive Sponsorship Program</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Négo (Defence / Negotiation)</fullName>
                <label>Negociation</label>
            </value>
            <value>
                <fullName>Non-commercial</fullName>
            </value>
            <value>
                <fullName>OnBoarding</fullName>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Plan de succès</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Project management</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Reclamation</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>