unpackaged/main/default/objects/Activity/fields/Targeting_Plan__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PAC associé à l'activité</description>
    <label>Targeting Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Targeting_Plan__c.End_Date__c</field>
            <operation>greaterThan</operation>
            <valueField>Targeting_Plan__c.Date_du_jour__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Targeting_Plan__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>