unpackaged/main/default/objects/Activity/fields/Unreachable__c.field-meta.xml
<CustomField>
    <fullName>Unreachable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unreachable</label>
    <type>Checkbox</type>
</CustomField>